<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>
	<groupId>br.estudantesuam.ead</groupId>
	<artifactId>nexus-academico</artifactId>
	<version>1.0-SNAPSHOT</version>
	<name>Nexus Acadêmico</name>
	<description>Sistema de gestão de projetos e equipes</description>
	<properties>
		<maven.compiler.source>25</maven.compiler.source>
		<maven.compiler.target>25</maven.compiler.target>
	</properties>
	<dependencies>
	    <dependency>
		    <groupId>org.xerial</groupId>
		    <artifactId>sqlite-jdbc</artifactId>
		    <version>3.46.0.0</version>
		</dependency>
	    <dependency>
			<groupId>org.junit.jupiter</groupId>
			<artifactId>junit-jupiter</artifactId>
			<version>5.10.0</version>
			<scope>test</scope>
	    </dependency>
	    <dependency>
	        <groupId>ch.qos.logback</groupId>
	        <artifactId>logback-classic</artifactId>
	        <version>1.5.6</version>
	    </dependency>
	    <dependency>
	        <groupId>org.apache.logging.log4j</groupId>
	        <artifactId>log4j-to-slf4j</artifactId>
	        <version>2.23.1</version>
    	</dependency>
	</dependencies>
	<build>
		<plugins>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-compiler-plugin</artifactId>
				<version>3.13.0</version>
				<configuration>
					<source>${maven.compiler.source}</source>
					<target>${maven.compiler.target}</target>
				</configuration>
			</plugin>
			<plugin>
		    <groupId>org.codehaus.mojo</groupId>
		    <artifactId>exec-maven-plugin</artifactId>
		    <version>3.2.0</version>
		    <configuration>
		        <mainClass>br.estudantesuam.ead.nexusacademico.Main</mainClass>
		        <executable>java</executable>
		        <arguments>
		            <argument>--enable-native-access=ALL-UNNAMED</argument>
		            <argument>-classpath</argument>
		            <classpath/>
		            <argument>${mainClass}</argument>
		        </arguments>
		    </configuration>
		</plugin>
		</plugins>
	</build>
</project>